# pothole-deepstream

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  broker.sh  broker1.sh  broker2.sh  check_gps.sh  check_video.sh  collect_video.sh  compile.sh  kafka.sh  kafka_consumer.py  kafka_producer.py  main.hpp  main2.cpp  run.sh
bytetrack/: README.md
configs/: cfg_msgconv.txt  config_infer_primary_yoloV8.txt  config_infer_primary_yoloV8_seg.txt  config_preprocess.txt  pipeline_config.txt  tracker_config.txt
debug/: main.py  pipeline.dot
server_local/: README.md  main.py  run.sh
server_local/gps_module/python3/: L76X.py  config.py  get_gps.py  kafka_consumer.py  loop.py  push_rest_server.py  readme.txt  utils.py
server_local/gps_module/python3/micropyGPS-master/: README.md
server_local/gps_module/python3/micropyGPS-master/pyboard/: GPIO_interrupt_updater.py  good_sentences.py  uart_test.py
utils/: common_util.cpp  common_util.hpp  file_sink_bin.cpp  file_sink_bin.hpp  file_source_bin.cpp  file_source_bin.hpp  message_broken_bin.cpp  message_broken_bin.hpp  message_broker_bin.cpp  message_broker_bin.hpp  rtsp_sink_bin.cpp  rtsp_sink_bin.hpp  webcam_source_bin.cpp  webcam_source_bin.hpp
yolov8/nvdsinfer_custom_impl_Yolo_yolov8/: Makefile
yolov8seg/nvdsinfer_custom_impl_Yolo_seg/: Makefile
